# atomic-rag

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  requirements.txt
atomic_rag/: __init__.py  schema.py
atomic_rag/agent/: __init__.py  base.py  evaluator.py  generator.py  runner.py
atomic_rag/context/: __init__.py  base.py  compressor.py
atomic_rag/evaluation/: __init__.py  answer_relevance.py  base.py  faithfulness.py  ragas_eval.py
atomic_rag/ingestion/: __init__.py  base.py  chunker.py  code_ingestor.py  markitdown_ingestor.py
atomic_rag/models/: __init__.py  base.py  ollama.py  openai_provider.py
atomic_rag/query/: __init__.py  base.py  hyde.py  multi_query.py
atomic_rag/retrieval/: __init__.py  base.py  bm25.py  fusion.py  hybrid.py  reranker.py  vector_store.py
docs/: index.md  references.md
docs/concepts/: data-packet.md
docs/guides/: swapping-backends.md
docs/modules/: agent.md  context.md  evaluation.md  ingestion.md  query.md  retrieval.md
docs/techniques/: context-compression.md  corrective-rag.md  cross-encoder-reranking.md  hybrid-search.md  hyde.md  markdown-native-parsing.md  multi-query-expansion.md
examples/book_qa/: README.md  config.py  ingest.py  query.py
examples/book_qa/data/: .gitignore
examples/code_qa/: README.md  config.py  ingest.py  query.py
examples/novel_qa/: README.md  config.py  ingest.py  query.py
examples/novel_qa/data/: .gitignore
tests/: test_agent.py  test_code_ingestor.py  test_context.py  test_evaluation.py  test_ingestion.py  test_models.py  test_query.py  test_retrieval.py  test_schema.py
tests/fixtures/: sample.md
tests/integration/: test_ingestion_integration.py
