[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "atomic-rag-lib"
version = "0.1.0"
description = "A modular, research-backed RAG building block library"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"
authors = [
    { name = "Rohin Patel", email = "rohin.patel@outlook.com" },
]
keywords = ["rag", "retrieval-augmented-generation", "llm", "nlp", "vector-search", "bm25"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pydantic>=2.0",
]

[project.urls]
"Source Code" = "https://github.com/rohinp/atomic-rag"

[project.optional-dependencies]
ollama = ["ollama>=0.4.0"]
openai = ["openai>=1.0"]
markitdown = ["markitdown[pdf]>=0.1.0"]
retrieval = ["chromadb>=0.5", "rank-bm25>=0.2"]
reranker = ["sentence-transformers>=3.0"]
ragas = ["ragas>=0.2", "datasets>=2.0"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-mock>=3.14",
]
# Full local stack: everything needed to run the pipeline end-to-end with Ollama
all = [
    "ollama>=0.4.0",
    "markitdown[pdf]>=0.1.0",
    "chromadb>=0.5",
    "rank-bm25>=0.2",
    "sentence-transformers>=3.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-m 'not integration'"
markers = [
    "integration: marks tests that hit real models or external services (run with '-m integration')",
]

[tool.coverage.run]
source = ["atomic_rag"]
omit = ["tests/*"]
